--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,39 +4,36 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3001",
-    "build": "next build",
-    "start": "next start",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build": "storybook build",
+    "start": "storybook dev -p 6006"
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
-    "next": "^15.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "next": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.1",
+    "@chromatic-com/storybook": "~4.1.1",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@storybook/addon-a11y": "^9.1.13",
-    "@storybook/addon-docs": "^9.1.13",
-    "@storybook/addon-onboarding": "^9.1.13",
-    "@storybook/addon-vitest": "^9.1.13",
-    "@types/node": "^22.15.3",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
-    "eslint": "^9.34.0",
-    "eslint-plugin-storybook": "^9.1.13",
-    "storybook": "^9.1.13",
-    "typescript": "5.9.2",
-    "@storybook/nextjs-vite": "^9.1.13",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.56.1",
-    "@vitest/coverage-v8": "^3.2.4"
+    "@storybook/addon-a11y": "~9.1.13",
+    "@storybook/addon-docs": "~9.1.13",
+    "@storybook/addon-onboarding": "~9.1.13",
+    "@storybook/addon-vitest": "~9.1.13",
+    "@storybook/nextjs-vite": "~9.1.13",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "@vitest/browser": "~3.2.4",
+    "@vitest/coverage-v8": "~3.2.4",
+    "eslint": "catalog:",
+    "eslint-plugin-storybook": "~9.1.13",
+    "playwright": "~1.56.1",
+    "storybook": "~9.1.13",
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   }
 }
