--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,14 @@
 packages:
   - "apps/*"
   - "packages/*"
+
+catalog:
+  '@types/node': "~22.18.11"
+  '@types/react': 19.1.0
+  '@types/react-dom': 19.1.1
+  eslint: ~9.38.0
+  next: ~15.5.6
+  react: ~19.2.0
+  react-dom: ~19.2.0
+  typescript: 5.9.2
+  vitest: ~3.2.4
