--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "storybook-build": "turbo run build --filter=docs",
+    "storybook-dev": "turbo run dev --filter=docs"
   },
   "devDependencies": {
     "prettier": "~3.6.2",
