--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,7 +1,6 @@
 {
   "name": "docs",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
   "scripts": {
     "lint": "next lint --max-warnings 0",
@@ -34,6 +33,7 @@
     "playwright": "~1.56.1",
     "storybook": "~9.1.13",
     "typescript": "catalog:",
+    "vite": "5.4.1",
     "vitest": "catalog:"
   }
 }
