--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "~4.1.1",
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@config/tsconfig": "workspace:*",
     "@storybook/addon-a11y": "~9.1.13",
     "@storybook/addon-docs": "~9.1.13",
     "@storybook/addon-onboarding": "~9.1.13",
