--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -2,12 +2,12 @@
   "name": "docs",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "storybook dev -p 6006",
     "build": "storybook build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint stories --max-warnings 0",
+    "lint:fix": "eslint stories --fix",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "~4.1.1",
+    "@config/eslint": "workspace:*",
     "@config/tsconfig": "workspace:*",
     "@storybook/addon-a11y": "~9.1.13",
     "@storybook/addon-docs": "~9.1.13",
