--- a/packages/dur-ui/package.json
+++ b/packages/dur-ui/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "@repo/ui",
+  "name": "dur-ui",
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    "./*": "./src/*.tsx"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
   },
+  "files": ["dist"],
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "tsup && tsc --emitDeclarationOnly",
+    "dev": "tsup --watch",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc --noEmit"
@@ -20,9 +28,10 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
+    "tsup": "~8.5.0",
     "typescript": "catalog:"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "catalog:",
     "react-dom": "catalog:"
   }
