--- a/packages/dur-ui/tsconfig.json
+++ b/packages/dur-ui/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "@config/tsconfig/library.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": false
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
